Alignment fixes

--- a/application/views/global.css
+++ b/application/views/global.css
@@ -1988,7 +1988,8 @@ i, .btn .show-max {
 }
 .cover-text {
     line-height: 120%;
-    text-align: center;
+    text-align: left;
+    margin-left: 5px;
 }
 .focus-coin .cover-text {
     padding: 8px;
